--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,23 @@
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm
+.yarn
+
+# Cloudflare
+.wrangler/
+wrangler.toml
+
+# Build
+dist/
+.cache/
+
+# OS
+.DS_Store
+Thumbs.db
+
 # Covers JetBrains IDEs: IntelliJ, GoLand, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
