--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "concurrently \"npx @tailwindcss/cli -i ./src/input.css -o ./assets/css/output.css --watch\" \"npx serve .\"",
-    "build": "npx @tailwindcss/cli -i ./src/input.css -o ./assets/css/output.css --minify",
+    "build": "npx @tailwindcss/cli -i ./src/input.css -o ./assets/css/output.css --minify && rm -rf docs src",
     "serve": "npx serve .",
     "start": "npx serve ."
   },
