--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "concurrently \"npx @tailwindcss/cli -i ./src/input.css -o ./assets/css/output.css --watch\" \"npx serve .\"",
-    "build": "node scripts/inject-components.js && npx @tailwindcss/cli -i ./src/input.css -o ./assets/css/output.css --minify && rm -rf docs src scripts",
+    "build": "node scripts/auto/inject-components.js && node scripts/auto/generate-sitemap.js && npx @tailwindcss/cli -i ./src/input.css -o ./assets/css/output.css --minify && rm -rf docs src scripts",
     "serve": "npx serve .",
     "start": "npx serve .",
-    "sitemap": "node scripts/generate-sitemap.js"
+    "sitemap": "node scripts/auto/generate-sitemap.js"
   },
   "keywords": [],
   "author": "",
